traces/bug_254.txt
examples++-load/pipe.cpp:204: error: STATIC_INITIALIZATION_ORDER_FIASCO
  Initializer of callDoLoadInit accesses global variable from a different translation unit: std::cout|.
Showing all 4 steps of the trace


examples++-load/pipe.cpp:204:1: initialization of callDoLoadInit
202.   }
203.   
204. > LOADFUNC(inittt);

examples++-load/pipe.cpp:204:1: call to DoLoadInit
202.   }
203.   
204. > LOADFUNC(inittt);

examples++-load/pipe.cpp:204:1: call to addInitFunct
  202.   }
  203.   
  204. > LOADFUNC(inittt);

src/fflib/InitFunct.cpp:80:23: access to std::cout|
  78.        ){ 
  79.       getInitFunctlist()->push_back(make_pair(i,f));
  80.       if(verbosity>9)   cout << " -- addInitFunct: " << i << " " << f 
                              ^
  81.   			   << " " <<  (name ? name : "" ) <<endl; 
  82.     }
